--- a/previews/PR406/examples/docs_4_rational_opt/index.html
+++ b/previews/PR406/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.982968e-01   1.671411e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.993376e-01   3.337018e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.006093e-01   4.994928e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.022102e-01   6.642199e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.041720e-01   8.275788e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.064102e-01   9.894293e+01
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.090408e-01   1.149348e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.120896e-01   1.306998e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.155367e-01   1.462139e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.193478e-01   1.614602e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.206787e-01   1.627251e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   7.632670e-01   1.310158e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   7.645643e-01   2.615869e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   7.658595e-01   3.917168e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   7.675748e-01   5.211218e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   7.699280e-01   6.494114e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   7.726327e-01   7.765656e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   7.756356e-01   9.024856e+01
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   7.787452e-01   1.027294e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   7.823800e-01   1.150336e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   7.863707e-01   1.271665e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   7.877154e-01   1.282189e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.421626e-01   2.922587e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.434011e-01   5.824094e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.449604e-01   8.696651e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.469397e-01   1.152938e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.493826e-01   1.431096e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.530886e-01   1.699290e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.564581e-01   1.963765e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.602838e-01   2.220472e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   1.059235e+00   8.496695e+01
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   1.063153e+00   9.405982e+01
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   1.064105e+00   9.397570e+01
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   4.245999e-01   2.355158e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   4.258210e-01   4.696809e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   4.273981e-01   7.019217e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   4.293728e-01   9.315913e+01
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.320576e-01   1.157253e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.347955e-01   1.379959e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.379621e-01   1.598312e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.419569e-01   1.810131e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.473819e-01   2.011704e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.520436e-01   2.212176e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.531906e-01   2.206577e+02
 -------------------------------------------------------------------------------------------------
-  1.510581 seconds (1.27 M allocations: 70.435 MiB, 45.05% gc time, 51.72% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 31 July 2023 14:04">Monday 31 July 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  1.042861 seconds (1.28 M allocations: 70.656 MiB, 96.45% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 31 July 2023 14:18">Monday 31 July 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
