--- a/previews/PR408/examples/docs_4_rational_opt/index.html
+++ b/previews/PR408/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.620983e-01   1.510350e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.631472e-01   3.015922e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.649669e-01   4.511503e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.664286e-01   6.002143e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.685755e-01   7.478586e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.709045e-01   8.943151e+01
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.736777e-01   1.039073e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.762746e-01   1.182951e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.794840e-01   1.324534e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.843582e-01   1.461223e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.858222e-01   1.472685e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.683598e-01   1.496200e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.694189e-01   2.987666e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.706786e-01   4.473081e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.723755e-01   5.949057e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.747042e-01   7.410655e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.778671e-01   8.851292e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.805039e-01   1.028649e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.831776e-01   1.170999e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.861075e-01   1.311748e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.901303e-01   1.449002e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.914207e-01   1.460760e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.774085e-01   2.649649e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.788365e-01   5.279322e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.805623e-01   7.883071e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.824608e-01   1.045859e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.852519e-01   1.297852e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.880828e-01   1.546062e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.913335e-01   1.788756e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.953256e-01   2.023648e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.006008e-01   2.246626e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.058987e-01   2.463669e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.070138e-01   2.456919e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.844139e-01   2.601363e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.855920e-01   5.186829e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.870331e-01   7.751275e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.890530e-01   1.028138e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.914227e-01   1.277391e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.942594e-01   1.521841e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.978180e-01   1.759599e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.015259e-01   1.992399e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.057400e-01   2.218169e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.108376e-01   2.434052e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.119474e-01   2.427495e+02
 -------------------------------------------------------------------------------------------------
-  0.937820 seconds (1.27 M allocations: 70.410 MiB, 96.17% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 3 August 2023 09:06">Thursday 3 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  1.013565 seconds (1.27 M allocations: 70.401 MiB, 7.48% gc time, 96.09% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 3 August 2023 09:23">Thursday 3 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
