--- a/dev/examples/docs_4_rational_opt/index.html
+++ b/dev/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.601040e-01   1.514913e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.610992e-01   3.025265e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.623066e-01   4.529624e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.638289e-01   6.025649e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.657077e-01   7.510804e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.680055e-01   8.981962e+01
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.706353e-01   1.043786e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.735332e-01   1.187766e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.766886e-01   1.330006e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.809672e-01   1.468500e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.822034e-01   1.480497e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   7.786993e-01   1.284193e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   7.798142e-01   2.564714e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   7.810769e-01   3.840851e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   7.829354e-01   5.108978e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   7.850176e-01   6.369284e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   7.874126e-01   7.619893e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   7.901800e-01   8.858741e+01
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   7.985423e-01   1.001825e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   8.022332e-01   1.121868e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   8.073311e-01   1.238649e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   8.088030e-01   1.248759e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.653170e-01   2.737349e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.664107e-01   5.458356e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.677720e-01   8.157228e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.695759e-01   1.082322e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.723454e-01   1.342839e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.748966e-01   1.600441e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.777752e-01   1.852954e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.814434e-01   2.097297e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.850352e-01   2.337449e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.896799e-01   2.566209e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.906525e-01   2.559820e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   4.219856e-01   2.369749e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   4.232617e-01   4.725209e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   4.247632e-01   7.062759e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   4.267548e-01   9.373065e+01
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.292342e-01   1.164865e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.325100e-01   1.387251e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.359242e-01   1.605784e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.396356e-01   1.819689e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.439432e-01   2.027286e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.486424e-01   2.228947e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.496367e-01   2.224018e+02
 -------------------------------------------------------------------------------------------------
-  0.890950 seconds (1.28 M allocations: 70.852 MiB, 96.26% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 3 August 2023 11:01">Thursday 3 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  1.106016 seconds (1.28 M allocations: 70.745 MiB, 7.36% gc time, 96.33% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 3 August 2023 11:05">Thursday 3 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
