build based on 0a1121e

--- a/previews/PR411/examples/docs_4_rational_opt/index.html
+++ b/previews/PR411/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.336396e-01   1.873924e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.345368e-01   3.741557e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   5.356243e-01   5.600941e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   5.369761e-01   7.449121e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   5.386322e-01   9.282771e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   5.405780e-01   1.109923e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   5.427820e-01   1.289652e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   5.452524e-01   1.467210e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   5.478882e-01   1.642671e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   5.509445e-01   1.815065e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   5.526909e-01   1.827423e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   7.770809e-01   1.286867e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   7.781031e-01   2.570354e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   7.795815e-01   3.848219e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   7.849101e-01   5.096125e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   7.871235e-01   6.352243e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   7.894794e-01   7.599945e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   7.928091e-01   8.829364e+01
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   7.958132e-01   1.005261e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   7.996132e-01   1.125544e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   8.037640e-01   1.244146e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   8.059002e-01   1.253257e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.665802e-01   2.727916e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.675290e-01   5.441748e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.686736e-01   8.137279e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.701981e-01   1.080503e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.720435e-01   1.343929e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.742393e-01   1.603252e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.767413e-01   1.858039e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.795420e-01   2.107804e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.827523e-01   2.351390e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.862784e-01   2.588806e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.870943e-01   2.583350e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.839824e-01   2.604286e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.854767e-01   5.188381e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.870599e-01   7.750738e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.888767e-01   1.028604e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.909974e-01   1.278781e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.934129e-01   1.525115e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.965787e-01   1.765097e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.998598e-01   2.000701e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.034571e-01   2.230721e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.074031e-01   2.454572e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.082834e-01   2.449279e+02
 -------------------------------------------------------------------------------------------------
-  0.800135 seconds (1.27 M allocations: 70.521 MiB, 7.57% gc time, 96.17% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 10 August 2023 14:53">Thursday 10 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.946969 seconds (1.28 M allocations: 70.708 MiB, 96.70% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 10 August 2023 15:58">Thursday 10 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
